Wed Nov  8 22:46:43 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* m68k-tdep.c (m68k_get_longjmp_target): Rename function
 	get_longjmp_target.  Remove wrapping #ifdef GET_LONGJMP_TARGET.
	* config/m68k/tm-m68k.h (m68k_get_longjmp_target): Add function
 	declaration.

	* config/m68k/tm-vx68.h, config/m68k/tm-sun3.h,
 	config/m68k/tm-m68kv4.h, config/m68k/tm-linux.h,
 	config/m68k/tm-es1800.h, config/m68k/tm-cisco.h: Update definition
 	of GET_LONGJMP_TARGET.  Delete get_longjmp_target function
 	declaratation.

Wed Nov  8 15:32:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbserver/configure.in (files): Don't link nm-empty.h when a
 	non-native target.
	* gdbserver/configure: Regenerate.

2000-11-07  Kevin Buettner  <kevinb@redhat.com>

	* valops.c (typecmp): Protoize.
	* valprint.c (strcat_longest): Protoize.

2000-11-07  Kevin Buettner  <kevinb@redhat.com>

	* ia64-tdep.c (native_find_global_pointer):  New global variable.
	(struct gdbarch_tdep): Add member find_global_pointer.
	(ia64_gdbarch_init): Initialize find_global_pointer member.  Also,
	tell the gdbarch machinery that we have floating point registers.
	(FIND_GLOBAL_POINTER): New macro.
	(generic_elf_find_global_pointer):  Renamed from find_global_pointer.
	(find_func_descr, ia64_push_return_address):  Call
	FIND_GLOBAL_POINTER instead of find_global_pointer.
	(process_note_abi_tag_sections):  Enable code previously disabled
	by #if 0.

2000-11-07  Daniel Berlin  <dberlin@redhat.com>

	* dwarf2read.c: Revert June 5th change for caching of types,
	as per Jim Blandy's request.

2000-11-06  Fernando Nasser  <fnasser@totem.toronto.redhat.com>

	* wrapper.c (gdb_value_assign): New function.  Longjump-free
	version of value_assign.
	(wrap_value_assign): New function. Wrapper for value_assign.
	* wrapper.h: Add declaration for the above.
	* varobj.c (varobj_set_value): Use gdb_value_assign, not
	value_assign which can longjump.  Do not change varobj value if
	assign fails.
	